--- a/test/runner.html
+++ b/test/runner.html
@@ -8,14 +8,26 @@
   <div id="mocha"></div>
   <script src="../node_modules/mocha/mocha.js"></script>
   <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/sinon/pkg/sinon-1.14.1.js"></script>
 
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.20.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.0.9/jstree.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script>
+
+  <script src="../lib/utils.js"></script>
+  <script src="../lib/s3.js"></script>
   <script>
     mocha.setup('bdd')
     mocha.reporter('html');
   </script>
 
   <!-- Tests -->
-  <script src="tests.js"></script>
+  <script src="test.js"></script>
 
   <script>
     // Only tests run in real browser, injected script run if options.run == true
