--- a/test/runner.html
+++ b/test/runner.html
@@ -27,7 +27,8 @@
   </script>
 
   <!-- Tests -->
-  <script src="test.js"></script>
+  <script src="utils-test.js"></script>
+  <script src="s3-test.js"></script>
 
   <script>
     // Only tests run in real browser, injected script run if options.run == true
