Update entry css

--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script>
 
   <script src="public/js/dist/entry.min.js"></script>
-  <script src="public/js/dist/dodgercms.min.js"></script>
+  <!--<script src="public/js/dist/dodgercms.min.js"></script>-->
 
+  <script src="lib/auth.js"></script>
+  <script src="lib/entry.js"></script>
+  <script src="lib/s3.js"></script>
+  <script src="lib/utils.js"></script>
+  <script src="public/js/app.js"></script>
 </head>
 <body>
 
