--- a/login.html
+++ b/login.html
@@ -2,12 +2,8 @@
 
 <html>
 <head>
-  <title>DodgerCMS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />
-  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="public/css/login.css">
+  <title>DodgerCMS - Login</title>
+
   <link rel="shortcut icon" href="public/img/icons/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" sizes="57x57" href="public/img/icons/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="public/img/icons/apple-touch-icon-72x72.png" />
@@ -16,12 +12,22 @@
   <link rel="apple-touch-icon" sizes="120x120" href="public/img/icons/apple-touch-icon-120x120.png" />
   <link rel="apple-touch-icon" sizes="144x144" href="public/img/icons/apple-touch-icon-144x144.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="public/img/icons/apple-touch-icon-152x152.png" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="nofollow,noindex"/>
+
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="public/css/login.css">
+
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.20.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script>
-  <script src="lib/auth.js"></script>
-  <script src="public/js/login.js"></script>
+
+  <script src="public/js/dist/login.min.js"></script>
+  <script src="public/js/dist/dodgercms.min.js"></script>
 </head>
   <body>
     <div class="container">
