Update distribution package

--- a/login.html
+++ b/login.html
@@ -19,7 +19,8 @@
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="public/css/login.css">
+  
+  <link rel="stylesheet" href="public/css/dist/login.min.css">
 
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.20.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
