--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="public/css/vendor/jstree.proton.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/github.min.css" />
-  <link rel="stylesheet" href="public/css/app.css" />
+
+  <link rel="stylesheet" href="public/css/vendor/jstree.proton.min.css" />
+  <link rel="stylesheet" href="public/css/dist/app.min.css">
 
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.20.min.js"></script>
