correction to View href in edit mode

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
           <div class="pure-u-1">
             <div class="toolbar">
-              <a id="view-entry" class="button-small pure-button" href="" target="_blank"><i class="fa fa-external-link"></i> View</a>
+              <a id="view-entry" class="button-small pure-button" href="{{siteEndpoint}}{{key}}" target="_blank"><i class="fa fa-external-link"></i> View</a>
               <label for="upload-image" class="button-small pure-button upload-image" title="Upload Image"><i class="fa fa-cloud-upload"></i> Attach</label>
               <input id="upload-image" type="file" class="file-upload" />
             </div>
