added support for multiple page output templates

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
         <fieldset>
           <div id="metacontent" class="pure-g">
             <div class="pure-u-1-2">
+              <label>Page Template</label>
+              <select id="template" class="metadata"></select>
+            </div>
+            <div class="pure-u-1-2">
               <label>Data Type</label>
               <select id="datatype" class="{{whichPartial}} metadata"></select>
             </div>
