Corrected issue of Markdown not processing by adding in a 'markdown' template type

--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
               <a id="view-entry" class="button-small pure-button" href="{{siteEndpoint}}{{key}}" target="_blank"><i class="fa fa-external-link"></i> View</a>
             </div>
           </div>
-          <div id="content-body-container" class="pure-u-1">
-            {{> (whichPartial) }}
-          </div>
+          <div id="content-body-container" class="pure-u-1">{{> (whichPartial) }}</div>
           <div class="content-footer-controls pure-u-1">
             <button type="submit" class="pure-button primary-button">Save</button>
           </div>
