Added method to publish all files and refresh the main menu

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
+
   <script src="public/js/dist/entry.min.js"></script>
   <script src="public/js/dist/app.min.js"></script>
   <script src="public/js/dist/dodgercms.min.js"></script>
@@ -107,7 +110,7 @@
 
     </form>
   </div>
-</script>  
+</script>
 
 <div id="layout" class="content pure-g">
   <div id="nav" class="pure-u">
@@ -119,6 +122,8 @@
           <li class="pure-menu-item"><a href="#" class="pure-menu-link">Recent</a></li>
           <li class="pure-menu-item"><a href="#" class="pure-menu-link">Draft</a></li>
           <li class="pure-menu-item"><a href="#" class="pure-menu-link">Trash</a></li>
+          <li class="pure-menu-item"><a href="#" class="pure-menu-link publish-all-link">Refresh All Files</a></li>
+          <li class="pure-menu-item"><a href="#" class="pure-menu-link publish-menu-link">Refresh Menu</a></li>
         </ul>
       </div>
     </div>
