--- a/login.html
+++ b/login.html
@@ -39,19 +39,33 @@
           <input type="password" style="display:none" aria-hidden="true">
           <div class="pure-g">
             <div class="pure-u-1">
-              <input id="login-form-access-key" class="pure-u-1" type="text" placeholder="Access Key" value="" required>
+              <input id="login-form-access-key" class="pure-u-1" type="text" placeholder="Access Key" value="" required/>
             </div>
             <div class="pure-u-1">
-              <input id="login-form-access-secret" class="pure-u-1" type="text" placeholder="Access Secret" value="" required>
+              <input id="login-form-access-secret" class="pure-u-1" type="text" placeholder="Access Secret" value="" required/>
             </div>
             <div class="pure-u-1">
-              <input id="login-form-data-bucket" class="pure-u-1" type="text" placeholder="Data Bucket" value="" required>
+              <input id="login-form-data-bucket" class="pure-u-1" type="text" placeholder="Data Bucket" value="" required/>
             </div>
             <div class="pure-u-1">
-              <input id="login-form-assets-bucket" class="pure-u-1" type="text" placeholder="Assets Bucket" value="" required>
+              <input id="login-form-assets-bucket" class="pure-u-1" type="text" placeholder="Assets Bucket" value="" required/>
             </div>
             <div class="pure-u-1">
-              <input id="login-form-site-bucket" class="pure-u-1" type="text" placeholder="Site Bucket" value="" required>
+              <input id="login-form-site-bucket" class="pure-u-1" type="text" placeholder="Site Bucket" value="" required/>
+            </div>
+            <div class="pure-u-1">
+              <select id="login-form-region" class="pure-u-1" required>
+                <option value="us-east-1">us-east-1</option>
+                <option value="us-west-1">us-west-1</option>
+                <option value="us-west-2">us-west-2</option>
+                <option value="eu-west-1">eu-west-1</option>
+                <option value="ap-southeast-1">ap-southeast-1</option>
+                <option value="ap-southeast-2">ap-southeast-2</option>
+                <option value="ap-northeast-1">ap-northeast-1</option>
+                <option value="sa-east-1">sa-east-1</option>
+                <option value="cn-north-1">cn-north-1</option>
+                <option value="eu-central-1">eu-central-1</option>
+              </select>
             </div>
             <div class="pure-u-1">
               <label for="login-remember" class="pure-checkbox pure-input-label">
