--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>DodgerCMS</title>
-
+  <meta charset="utf-8"/>
   <link rel="shortcut icon" href="public/img/icons/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" sizes="57x57" href="public/img/icons/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="public/img/icons/apple-touch-icon-72x72.png" />
